# Selfa

./: README-POWERSHELL.md  README.md  STOCK_SAVE_FLOW_ANALYSIS.md  build_release_0.5.0.ps1  create-icons.ps1  fix-execution-policy.ps1  fix-npm-powershell.ps1  index.html  kill-port.bat  package-lock.json  package.json  start-dev-safe.bat  start-dev.bat  start-dev.ps1  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/python/: README.txt
src-tauri/scripts/: requirements.txt
src-tauri/src/: cache.rs  database.rs  main.rs  stock_api.rs
src-tauri/src/commands/: analysis.rs  indices.rs  mod.rs  portfolio.rs  price_alerts.rs  stock_data.rs  stock_groups.rs  stock_search.rs  tags.rs
src-tauri/src/database/: alerts.rs  cache.rs  groups.rs  indices.rs  kline.rs  mod.rs  portfolio.rs  quotes.rs  schema.rs  settings.rs  stocks.rs  tags.rs  time_series.rs  transfers.rs  utils.rs
src-tauri/src/stock_api/: ai_analysis.rs  ai_analysis_json.rs  ai_analysis_local.rs  ai_api_config.rs  analysis_intraday.rs  backtest.rs  candlestick_patterns.rs  chip_analysis.rs  data.rs  http_client.rs  mod.rs  prediction.rs  prediction_arima.rs  prediction_intraday.rs  prediction_similarity.rs  technical_indicators.rs  types.rs  utils.rs
src-tauri/src/stock_api/data/: kline.rs  quote.rs  search.rs  sector.rs
src-tauri/src/stock_api/prediction_advanced/: boris_gan.rs  deep_learning.rs  deos_alpha_time_gpt.rs  ensemble.rs  hurst_exponent.rs  mod.rs  monte_carlo.rs  space_explore_ai.rs  sspt_fine_tune.rs  (+2 more)
(+185 files in other folders)
